log/2021-05-10T18:24:31+0800.log
Autotest: Begin at 2021年 05月 10日 星期一 18:24:31 CST
[32m[ found your pageReplace.cpp ][0m
pageReplace.cpp: In function 'void qry(long int*, int)':
pageReplace.cpp:10:33: error: invalid conversion from 'int*' to 'int' [-fpermissive]
  for(register int *i=old,end=old+Q;i<end;++i)
                                 ^
pageReplace.cpp:10:38: error: ISO C++ forbids comparison between pointer and integer [-fpermissive]
  for(register int *i=old,end=old+Q;i<end;++i)
                                      ^
make: *** [main] Error 1
[31m[01m[ compile error ][0m
[33m[01m[ You got 0 (of 100) this time. 2021年 05月 10日 星期一 18:24:35 CST ][0m
